Added representation models and some generic exceptions.

--- a/code/backend/jvm/src/main/resources/application.properties
+++ b/code/backend/jvm/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-
+app.datasource.connectionString=jdbc:postgresql://localhost:5432/production?user=${DB_QRREPORT_USER}&password=${DB_QRREPORT_PASSWORD}
