--- a/code/frontend/js/package.json
+++ b/code/frontend/js/package.json
@@ -12,6 +12,7 @@
     "@types/react-dom": "^18.0.5",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-google-recaptcha": "^2.1.0",
     "react-hook-form": "^7.32.2",
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-google-recaptcha": "^2.1.5",
     "autoprefixer": "^10.4.7",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.0.24"
